serd (0.27.2) unstable;

  * Add support for reading from a user provided callback
  * Add serd_node_from_substring()
  * Fix strict parsing of abolute URI schemes
  * Fix parsing of hex escapes in file URIs (thanks Johannes Mueller)

 -- David Robillard <d@drobilla.net>  Sun, 09 Jul 2017 14:58:47 +0200

serd (0.26.0) stable;

  * Add support for TriG and NQuads
  * Add support for braindead SPARQL PREFIX and BASE directives

 -- David Robillard <d@drobilla.net>  Mon, 09 Jan 2017 20:10:35 -0500

serd (0.24.0) stable;

  * Add serd_node_new_relative_uri()
  * Fix construction and comparison of URIs with UTF-8 characters
  * Report I/O errors with message and return appropriate status code
  * Report missing statement separator errors
  * Fix potential out of bounds read
  * Fix unaligned memory access, undefined behaviour which breaks on ARM
  * Fix documentation generation
  * Update serdi man page

 -- David Robillard <d@drobilla.net>  Mon, 19 Sep 2016 22:21:47 -0400

serd (0.22.0) stable;

  * Remove dependence on fmax() to avoid portability issues
  * Fix serd_reader_read_file() for URIs with escaped characters (spaces)
  * Add serd_reader_set_strict() and -l (lax) option to serdi to tolerate
    parsing URIs with escaped characters
  * Fix reading statements ending with a blank then dot with no space
  * Fix clash resolution when a blank node ID prefix is set
  * Fix serializing fractional decimals that would round up
  * Add support for Turtle named inline nodes extension
  * Report errors for invalid IRI characters and missing terminators
  * Show serdi errors in standard format
  * Fix warnings when building with ISO C++ compilers
  * Upgrade to waf 1.8.14

 -- David Robillard <d@drobilla.net>  Thu, 08 Oct 2015 15:34:18 -0400

serd (0.20.0) stable;

  * Support new RDF 1.1 Turtle
  * Don't write xsd:decimal literals to Turtle bare if they would not be read
    back with the same type
  * Fix possible crash in serd_writer_end_anon() when writing invalid lists